[CLEANUP] A few additional cleanups